# cookiecutter-python

./: README.md  cookiecutter.json
docs/: FEATURES.md  TEMPLATE_USAGE.md
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
{{cookiecutter.project_slug}}/api/: README.md  __init__.py  main.py
{{cookiecutter.project_slug}}/docker/: .dockerignore  Dockerfile.dev  README.md  docker-compose.yml
{{cookiecutter.project_slug}}/docs/: api.md  frontend.md  getting-started.md  index.md
{{cookiecutter.project_slug}}/frontend/: README.md  __init__.py  app.py
{{cookiecutter.project_slug}}/models/: .gitkeep
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  __main__.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/utils/: __init__.py  logging.py
{{cookiecutter.project_slug}}/tests/: __init__.py  conftest.py  test_example.py
