[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
license = "{{ cookiecutter.license }}"
authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" }
]
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = [
    "python-dotenv>=1.0.0",
    {%- if cookiecutter.use_loguru == "yes" %}
    "loguru>=0.7.0",
    {%- endif %}
    {%- if cookiecutter.include_api == "yes" %}
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    {%- endif %}
    {%- if cookiecutter.include_frontend == "yes" %}
    "nicegui>=2.0.0",
    {%- endif %}
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
    "ipykernel>=6.0.0",
    {%- if cookiecutter.include_docs == "yes" %}
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    {%- endif %}
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/{{ cookiecutter.project_slug }}"]

# Ruff Configuration
[tool.ruff]
target-version = "py{{ cookiecutter.python_version | replace('.', '') }}"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["{{ cookiecutter.project_slug }}"]

# Pytest Configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-v", "--tb=short"]
